moved get button to layer dropdown, fixed bug where wfs stuck at yes if you removed url

--- a/ckanext/wfs_checker/templates/package/snippets/resource_form.html
+++ b/ckanext/wfs_checker/templates/package/snippets/resource_form.html
@@ -72,7 +72,7 @@
                             </option>
                         </select>
                         <span style="padding-top: 2px" class="input-group-btn">
-                            <button class="btn btn-success submitBtn" disabled id='get_layers_btn' type="button">get</button>
+                            <button class="btn btn-success submitBtn" id='get_layers_btn' type="button">get</button>
                         </span>
                     </div>
                     <div class="info-block ">
