fixed bug where multiple listeners for buttons would be setup on creation of new resource, added more error handling for esri rest service getting.

--- a/ckanext/wfs_checker/templates/package/snippets/resource_form.html
+++ b/ckanext/wfs_checker/templates/package/snippets/resource_form.html
@@ -7,7 +7,7 @@
 
     {{ form.image_upload(data, errors, field_url='url', field_upload='upload', field_clear='clear_upload',
     is_upload_enabled=h.uploads_enabled(), is_url=data.url and not is_upload, is_upload=is_upload,
-    upload_label=_('Contribute'), placeholder=_('Please enter your WFS here'),
+    upload_label=_('Contribute'), placeholder=_('Please enter your URL here'),
     url_label=_('URL'))
     }}
 
